Werkt nog altijd niet, commandline parser doet moeilijk.