@@ -2,8 +2,8 @@ package tools;
 
 import com.beust.jcommander.IParameterValidator;
 import com.beust.jcommander.ParameterException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 /**
  * Docs : http://jcommander.org/
@@ -13,11 +13,14 @@ public class CommandlineValidatorUrl implements IParameterValidator {
 
     @Override
     public void validate(String name, String value) throws ParameterException {
+        System.out.println(name + value);
         try {
-            new URL(value);
-        } catch (MalformedURLException ex) {
-            throw new ParameterException("Parameter " + name + " should be an URL.");
+            URI url = new URI(value);
+        } catch (URISyntaxException ex) {
+            throw new ParameterException("The first parameter should be an URL. ");
         }
+        
+        
     }
     
 }
